# trader

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  GUIDE.md  INSTALLATION.md  LICENSE  README.md  STRUCTURE.md  agent_usage_guide.md  context-management.md  custom_instructions.md  hooks_examples.sh  prompt_templates.md  quick_start.md
config/: default.yaml  production.yaml  test.yaml
dashboard/: _headers  accuracy.html  analysis.html  index.html  simulator.html  stock.html
dashboard-v2/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
data/: glossary.yaml
docs/: code_review.md  plan_chart_visualization.md  plan_cloudflare_pages.md  plan_line_bot.md  proposal.md  review.md  review_add_user_readme_and_notifications.md
scripts/: migrate_sheets_to_db.py
src/: alpha_survey.py  baseline.py  chart_builder.py  cli.py  enricher.py  exporter.py  finnhub_fetcher.py  fmp_fetcher.py  glossary.py  jquants_fetcher.py  line_notifier.py  macro_fetcher.py  main.py  meta.py  notifier.py  orchestrator.py  predictor.py  screener.py  sheets.py  tracker.py  utils.py  walkforward.py
tests/: conftest.py  test_alpha_survey.py  test_analysis_analyzers.py  test_analysis_base.py  test_analysis_data_collector.py  test_analysis_exporter.py  test_analysis_llm_client.py  test_analysis_retail_analyzers.py  test_analysis_runner.py  test_baseline.py  test_chart_builder.py  test_config.py  test_enricher.py  (+17 more)
(+523 files in other folders)
